// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with all attrs 1`] = `
<ForwardRef>
  <ForwardRef
    src="https://example/image.png"
  />
  <ForwardRef>
    <ForwardRef>
      <ForwardRef>
        test
      </ForwardRef>
      <Stars />
    </ForwardRef>
    <ForwardRef
      dangerouslySetInnerHTML={
        Object {
          "__html": "test",
        }
      }
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`without image 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef>
      <ForwardRef>
        test
      </ForwardRef>
      <Stars />
    </ForwardRef>
    <ForwardRef
      dangerouslySetInnerHTML={
        Object {
          "__html": "test",
        }
      }
    />
  </ForwardRef>
</ForwardRef>
`;
